refact: refatoracao completa do script